<resources>
    <string name="app_name">Dali_Bike</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_button">다 음</string>
    <string name="start_button">시작하기</string>
    <string name="name">이 름</string>
    <string name="nickname">닉네임</string>
    <string name="done">완료</string>
    <string name="check">중복확인</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="check_pw">비밀번호 확인</string>
    <string name="phone">전화번호</string>
    <string name="ok">확인</string>
    <string name="join">회원가입</string>
    <string name="back">이전</string>
</resources>